[metadata]
name = pywype
version = 0.3
author = Jason Hall
author_email = jdhall75@gmail.com
description = Securely wipe storage drives and partitions
long_description = file: README.rst
long_description_content_type = text/rst
url = https://github.com/jdhall75/pyWype
project_urls =
    Bug Tracker = https://github.com/jdhall75/pywype/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    future==0.16.0
    regex==2017.7.28


[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pywype = pywype.command_line:main